website/src/components/Page/Footer.css
@import url("https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");

* {
  margin: 0;
  padding: 0;
  font-family: Roboto,Helvetica,sans-serif;
}

.footer {
  width: 100%;
  background: #2D3E50;
  display: block;
}

.inner-footer {
  width: 95%;
  margin: auto;
  padding: 1.875rem 0.625rem;
  display: flex;
  flex-wrap: wrap;
  box-sizing: border-box;
  justify-content: center;
}

.footer-items {
  width: 25%;
  padding: 0.625rem 2.5rem;
  box-sizing: border-box;
}

.footer-logo div{
  display: inline-block;
  color: #fff;
  font-family: Roboto,Helvetica,sans-serif;
}

.footer-logo img {
  width: 2.1875rem;
  height: 2.1875rem;

  top: 0.75rem;
  /*padding-left: 225px;*/
  position: relative;
  margin-right: 0rem;
}  

h1 {
  padding: 0rem 0;
  font-size: 1.125rem;
  color: #fff;
  display: inline-block;
  margin-left: 0.5rem;
}

.footer-items p {
  color: grey;
  font-size: 1rem;
  text-align: justify;
  line-height: 1.5625rem;
}

h2 {
  margin: 0.625rem 0;
  color: #fff;
  font-size: 1.25rem;
  font-weight: 900;
  text-shadow: none;
}

.border {
  height: 0.125rem;
  width: 2.5rem;
  background: #2D3E50;
}

ul {
  list-style: none;
  color: #BBC1C8;
  font-size: 0.9375rem;
  font-weight: lighter;
  letter-spacing: 0.03125rem;
}

ul a {
  text-decoration: none;
  outline: none;
  color: #BBC1C8;
  transition: 0.3s;
}

ul a:hover {
  color: #fff;
}

ul li {
  margin: 1.5625rem 0;
  height: 0rem;
}

li i {
  margin-right: 1rem;
  vertical-align: middle;
}

.fa-facebook {
  margin-left: 5px;
}

.social-media {
  width: 100%;
  color: #fff;
  text-align: center;
}

.social-media a {
  text-decoration: none;
}

.social-media i {
  height: 0.9375rem;
  width: 0.9375rem;
  margin: 1.25rem 0.3125rem;
  padding: 0.625rem;
  color: #fff;
  border-radius: 50%;
  border: 0.0625rem solid grey;
  transition: 0.3s;
}
c
.social-media i:hover {
  background: grey;
}

.footer-bottom {
  padding: 3.75rem;
  background: #2D3E50;
  color: #BBC1C8;
  font-size: 0.9375rem;
  margin-left: 6.25rem;
  font-weight: lighter;
}

@media screen and (max-width: 67.8125rem) {
  .footer-items {
      width: 50%;
  }
}

@media screen and (max-width: 37.5rem) {
  .footer-items {
      width: 100%;
  }
}

